--- a/dada/DADA/Template/templates/new_list_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_screen.tmpl
@@ -386,8 +386,9 @@
 			<td>
 				<p>
 					<label for="clone_settings">
-						Clone settings from this list: <!-- tmpl_var list_popup_menu -->
+						Clone settings from this list: 
 					</label>
+					<!-- tmpl_var list_popup_menu -->
 				</p> 
 			</td> 
 		</tr> 
