closes #270 Installer gets confused during an upgrade if it cannot initially find the .dada_files directory

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -77,6 +77,7 @@
 
 			<form target="_blank" action="<!-- tmpl_var Self_URL -->"> 
 				<input type="hidden" name="f" value="show_current_dada_config" /> 
+				<input type="hidden" name="config_file" value = "<!-- tmpl_var configured_dada_config_file escape="HTML" -->" /> 
 				<div style="text-align:center">
 				<input type="submit" value="View this .dada_config Configuration..." class="plain" />
 				</div >
