Adding the, "IE-edge" meta tag, for what that's worth.

--- a/dada/DADA/Template/templates/list_template.tmpl
+++ b/dada/DADA/Template/templates/list_template.tmpl
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
  <head>
   <!-- <!-- tmpl_var PROGRAM_NAME --> <!-- tmpl_var VER --> -->
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <title><!-- tmpl_var title --></title>
+
 
   <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
 
