--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
  <head>
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Pragma"  content="no-cache" />
   <meta http-equiv="Expires" content="-1" />
- <meta http-equiv="Content-Type" content="text/html; charset=<!-- tmpl_var HTML_CHARSET -->">
+  <meta http-equiv="Content-Type" content="text/html; charset=<!-- tmpl_var HTML_CHARSET -->">
 
   <title><!-- tmpl_var title --> - <!-- tmpl_var list_settings.list_name --> - <!-- tmpl_var PROGRAM_NAME --></title>
  
