--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -15,6 +15,51 @@
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
+<fieldset> 
+<legend>Send a Message</legend> 
+
+<table cellpadding="5" border="0"> 
+	<tr> 
+		<td>
+			<p>Reveal:</p> 
+			
+<table cellpadding="5" border="0"> 
+	<tr> 
+		<td>
+			<p>
+				<input type="checkbox" name="show_message_body_plaintext_ver" id="show_message_body_plaintext_ver" <!-- tmpl_if list_settings.show_message_body_plaintext_ver -->checked="checked"<!-- /tmpl_if --> value="1" /> 	
+			</p>
+		</td>
+		<td>
+			<p>
+				<label for="show_message_body_plaintext_ver">
+					PlainText Version
+				</label>
+			</p>
+		</td>
+	</tr>
+	<tr> 
+		<td>
+			<p>
+				<input type="checkbox" name="show_message_body_html_ver" id="show_message_body_html_ver" <!-- tmpl_if list_settings.show_message_body_html_ver -->checked="checked"<!-- /tmpl_if --> value="1" /> 	
+			</p>
+		</td>
+		<td>
+			<p>
+				<label for="show_message_body_html_ver">
+					HTML Version
+				</label>
+			</p>
+		</td>
+	</tr>
+</table>
+</td>
+</tr>
+</table> 
+
+
+</fieldset> 
+
 
 <fieldset> 
 
