--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -73,8 +73,7 @@
 		 
  
  <div id="text_message"> 
-  <textarea name="text_message_body" id="text_message_body" cols="80" rows="30"></textarea>
-  
+ <!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 </div> 
 </fieldset> 
 
