Added plugin to Config.pm, installer, etc

--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -262,7 +262,7 @@
 		  </label>
 		 </p>
 		 <p>
-		  <textarea name="text_message_body" cols="80" rows="30">This email message requires that your mail reader support HTML.</textarea>
+			 <!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 		 </p>
 		 <input type="hidden" name="f" value="send_url_email" />
 		 
