--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -475,6 +475,9 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p><input type="checkbox" name="install_blog_index" id="install_blog_index" value="1"  /><label for="install_blog_index">Archive Blog Index</label></p> 
 
+<p><input type="checkbox" name="install_default_mass_mailing_messages" id="install_default_mass_mailing_messages" value="1"  /><label for="install_default_mass_mailing_messages">Default Mass Mailing Messages</label></p> 
+
+
 </fieldset> 
 
 </div> 
