Make the copy a little clearer.

--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -16,12 +16,16 @@
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
 <fieldset> 
-<legend>Send a Message</legend> 
+<legend>Message Body Authoring</legend> 
+
+<p>
+	These preferences will be honored in the, <strong>Send a Message</strong> screen and in the <strong>Beatitude Plugin</strong>
+</p>
 
 <table cellpadding="5" border="0"> 
 	<tr> 
 		<td>
-			<p>Reveal:</p> 
+			<p><strong>By default, reveal:</strong></p> 
 			
 <table cellpadding="5" border="0"> 
 	<tr> 
