--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -75,6 +75,49 @@
 </table>
 </fieldset>
 
+<fieldset>
+ <legend>
+	  Invitations
+ </legend>
+
+ <table>
+   <tr>
+    <td>
+     <p>
+      <input type="checkbox" name="invites_check_for_already_invited" id="invites_check_for_already_invited" value="1" <!-- tmpl_if list_settings.invites_check_for_already_invited -->checked="checked"<!--/tmpl_if--> />
+     </p>
+    </td>
+    <td>
+     <p>
+      <label for="invites_check_for_already_invited">
+       Check for Already Invited Addresses, Before Sending a List Invitation
+      </label>
+	<br /> 
+	<table>
+   <tr>
+    <td>
+     <p>
+      <input type="checkbox" name="invites_prohibit_reinvites" id="invites_prohibit_reinvites" value="1" <!-- tmpl_if list_settings.invites_prohibit_reinvites -->checked="checked"<!--/tmpl_if--> />
+     </p>
+    </td>
+    <td>
+     <p>
+      <label for="invites_prohibit_reinvites">
+       Prohibit Re-inviting Addresses
+      </label>
+     </p>
+    </td>
+   </tr>
+  </table>
+     </p>
+
+    </td>
+   </tr>
+  </table>
+
+
+
+</fieldset> 
 
 
 <fieldset>
