--- a/dada/DADA/Template/templates/membership.tmpl
+++ b/dada/DADA/Template/templates/membership.tmpl
@@ -26,8 +26,15 @@ function mailing_list_history(){
 			$('mailing_list_history_loading').update('<p class="alert">&nbsp;</p>');
 			Effect.BlindDown('mailing_list_history');
 		}	
-		});
+	});
 }
+
+
+function show_change_profile_password_form(){ 
+	Effect.BlindUp('change_profile_password_button');
+	Effect.BlindDown('change_profile_password_form');	
+}
+	
 //]]>
 </script> 
 
@@ -145,6 +152,10 @@ function mailing_list_history(){
 
 <!-- tmpl_if fields --> 
 
+<fieldset>
+	<legend>Member Profile</legend>
+	
+	
 	<fieldset> 
 	<legend>Profile Fields</legend>
 
@@ -193,7 +204,7 @@ function mailing_list_history(){
 		<!--/tmpl_loop-->
 
 	<!-- /tmpl_unless --> 
-
+	
 	<!-- tmpl_if root_login --> 
 		 <div class="buttonfloat">
 		  <input type="submit" value="Edit Information" class="cautionary" />
@@ -201,10 +212,33 @@ function mailing_list_history(){
 	<!-- /tmpl_if --> 
 
 		</form>
+	
+	</fieldset>
+	
+
+	<fieldset> 
+	<legend>Profile Password</legend>
+		<div id="change_profile_password_button">
+			<input type="button" value="Click to change Profile Password..." class="cautionary" onclick="show_change_profile_password_form();" />
+		</div> 
+		<div id="change_profile_password_form" style="display:none">
+			<form name="change_profile_password" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+				<input type="hidden" name="f" value="admin_change_profile_password" /> 
+				<input type="hidden" name="email" value="<!-- tmpl_var email -->" />
+				<input type="hidden" name="type" value="<!-- tmpl_var type -->" />
+				
+				<p>
+					<input type="password" name="profile_password" value="" />
+					<input type="submit" value="Change Profile Password" />
+			</form> 
+		</div>	
+	</fieldset> 
+
 
 	<div class="floatclear"></div>
 
 
+</fieldset>
 
 	</fieldset>
 
