--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -464,6 +464,7 @@ for it to work correctly. For help on setting the cronjob, see the
 	<p><label style="width: 16em;float: left;text-align: right;margin-right: 0.5em;display: block" for="dada_bounce_handler_password">Password:</label> <input type="text" name="dada_bounce_handler_password" id="dada_bounce_handler_password" value="" /></p>
 	 
 
+
 </fieldset> 
 
 <p><input type="checkbox" name="install_scheduled_mailings" id="install_scheduled_mailings" value="1" /><label for="install_scheduled_mailings">Scheduled Mailings</label>	
@@ -474,6 +475,8 @@ for it to work correctly. For help on setting the cronjob, see the
 <p><input type="checkbox" name="install_ajax_include_subscribe" id="install_ajax_include_subscribe" value="1" /><label for="install_ajax_include_subscribe">Ajax'd Subscription Form</label></p> 
 
 <p><input type="checkbox" name="install_blog_index" id="install_blog_index" value="1"  /><label for="install_blog_index">Archive Blog Index</label></p> 
+
+<p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protected Directories</label></p> 
 
 </fieldset> 
 
