This adds support to allow to set which tests are skipped when validating an email address for updating an email address, as well as fixing the problem of setting multiple profile email addresses, where those addresses will be used in the From: header of an email message (where only one address should be placed) - basically by only using one of those addresses. Needs documentation.

--- a/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
@@ -92,17 +92,19 @@
 			<!-- /tmpl_if --> 
 		
 			<!-- tmpl_if black_listed --> 
-					<li><p>Your new address is black listed from subscribing to this list. </p> 
+					<li><p>Your new address is black listed from subscribing to this mailing list. </p> 
 					</li>
 			<!-- /tmpl_if --> 
 	
 		     <!-- tmpl_if not_white_listed -->
 			<li> 
 				<p class="error">
-					The new email address is not on the list's white list. .
+					The new email address is not on the  mailing list's white list. .
 				</p>	
 			</li>
 			<!-- /tmpl_if --> 
+			
+			
 		
 		</ul> 
 		
