Muaha. Now it does work for all lists.

--- a/dada/DADA/Template/templates/update_email_results_widget.tmpl
+++ b/dada/DADA/Template/templates/update_email_results_widget.tmpl
@@ -28,7 +28,7 @@
 		</div> 
 	<!-- /tmpl_if --> 
 
-<pre><!-- tmpl_var validate_dump --></pre>
+<!-- <pre><!-- tmpl_var validate_dump --></pre> --> 
 
 
 <!-- end update_email_results_widget.tmpl --> 
