--- a/dada/DADA/Template/templates/membership.tmpl
+++ b/dada/DADA/Template/templates/membership.tmpl
@@ -29,6 +29,11 @@ function mailing_list_history(){
 		});
 }
 function doSomething(){ 
+	
+	var for_all_lists = 0; 
+	if(Form.Element.getValue('for_all_mailing_lists') == 1 && $('for_all_mailing_lists').checked == true){ 
+		for_all_lists = 1;
+	}
 	new Ajax.Updater(
 		'update_email_results', '<!-- tmpl_var S_PROGRAM_URL -->', 
 		{ 
@@ -37,7 +42,7 @@ function doSomething(){
 				f:             'update_email_results',
 				updated_email: $F('updated_email'),
 				email:         '<!-- tmpl_var email -->',
-				all_mailing_lists: 1
+				for_all_lists: for_all_lists
 			},
 		onCreate: 	 function() {
 			$('update_email_results_loading').update('<p class="alert">Loading...</p>');
@@ -164,8 +169,8 @@ function doSomething(){
 	<input type="text" id="updated_email" name="updated_email" value="<!-- tmpl_var email -->" class="midi" />
 	</p>
 	<p>
-		<input type="checkbox" name="all_mailing_lists" id="all_mailing_lists" value="1" />
-		<label for="all_mailing_lists">Update for All Mailing Lists</label>
+		<input type="checkbox" name="for_all_mailing_lists" id="for_all_mailing_lists" value="1" <!-- tmpl_unless root_login -->disabled="disabled"<!-- /tmpl_unless --> />
+		<label for="for_all_mailing_lists">Update for All Mailing Lists <!-- tmpl_unless root_login -->(Requires <!-- tmpl_var PROGRAM_NAME --> Root Login)<!--/tmpl_unless --></label>
 	</p>	 
 	<input type="button" value="Validate..." class="cautionary" onclick="doSomething();" />
 </form> 
