Some HTML template fixes.

--- a/dada/DADA/Template/templates/update_email_results_widget.tmpl
+++ b/dada/DADA/Template/templates/update_email_results_widget.tmpl
@@ -28,7 +28,11 @@
 		</div> 
 	<!-- /tmpl_if --> 
 
-<!-- <pre><!-- tmpl_var validate_dump --></pre> --> 
+<!-- tmpl_if comment -->
+<pre>
+<!-- tmpl_var validate_dump -->
+</pre>
+<!-- /tmpl_if --> 
 
 
 <!-- end update_email_results_widget.tmpl --> 
