--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -498,8 +498,10 @@ This will ultimately set the 'Return-Path' email header to the list administrati
 			</ul> 
 		<!-- /tmpl_if --> 
 	
-		<div id="amazon_ses_get_stats"></div> 
-		
+		<div class="clearskiesbox">
+			<div id="amazon_ses_get_stats"></div> 
+		</div> 
+	
 		<fieldset>
 		<legend>
 		 Amazon SES Tools
