--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -103,7 +103,7 @@
     <td>
      <p>
       <label for="invites_prohibit_reinvites">
-       Prohibit Re-inviting Addresses
+       Prohibit re-Inviting Addresses
       </label>
      </p>
     </td>
