--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -209,6 +209,13 @@ $PLUGIN_CONFIGS = {
 
 	},
 
+	default_mass_mailing_messages => {
+
+		Plugin_Name                         => undef,
+		Plugin_URL                          => undef,
+
+	},
+
 	password_protect_directories => {
 
 		Plugin_Name                         => undef,
@@ -218,7 +225,7 @@ $PLUGIN_CONFIGS = {
 		Base_Absolute_Path                  => undef, 
 		Base_URL                            => undef, 
 
-	}, 
+	},
 
 };
 
